[package]
name = "discord_music"
version = "0.1.0"
authors = ["tyler"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.3"
rspotify = "0.10.0"
tokio = { version = "0.2.0", features = ["full", "tracing"] }
serenity = {version = "0.10", default-features = false, features = ["rustls_tokio_0_2_backend", "builder", "cache", "client", "gateway", "model", "http", "utils"]}
